# bankcodelistTW

./: .gitignore  README.md
backend/: db.sqlite3  pyproject.toml
backend/banks/: models.py  serializers.py  urls.py  views.py
backend/banks/migrations/: 0001_initial.py  0002_alter_bank_code_alter_branch_code.py
backend/core/: settings.py  urls.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/api/: useBanks.js
frontend/src/components/: BranchDetail.jsx  Index.jsx
frontend/src/utilities/: copy.js
